<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="bottom"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_gravity="center_vertical"
        android:layout_weight="0.47"
        android:gravity="center_vertical|top"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:contentDescription="@string/imageContentDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="50dp"
            android:src="@drawable/img01" 
            android:onClick="imageToast"/>

        <Button
            android:id="@+id/btnDiamFoc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:text="@string/diamFoc" />

        <Button
            android:id="@+id/btnMesExp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:text="@string/mesureDExpo" />

        <Button
            android:id="@+id/btnMesStenop"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:text="@string/mesStenop" /> 

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/disclamer" />
    </LinearLayout>
    <!-- Pour plus tard -->

</LinearLayout>
