<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical" 
  android:gravity="center_horizontal" >
  
  <LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:gravity="center_horizontal" 
	android:orientation="vertical" 
	android:layout_height="wrap_content" 
	android:layout_width="match_parent" 
	android:padding="20dp">
	
		<ImageView
		    android:id="@+nvxStenope/ImageView01"
		    android:layout_width="200dp"
		    android:layout_height="200dp"
		    android:adjustViewBounds="true"
		    android:background="@drawable/ic_launcher"
		    android:src="@drawable/ic_launcher" >
		    <!-- 		    android:onClick="PrendPhoto" : A mettre audessus pour activé la prise de photo(alfa)-->
		    
	</ImageView>
		<TextView android:text="@string/nom" 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content" 
			android:id="@+nvxStenope/txtNom" 
			android:textSize="20dp" 
			android:layout_gravity="center" android:paddingTop="10dp"/>
		<EditText android:id="@+nvxStenope/EdTxtNom" 
			android:layout_height="wrap_content"
			android:layout_width="match_parent" android:inputType="text"/>
	
		<TextView android:text="@string/focale" 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content" 
			android:id="@+nvxStenope/txtFocale" 
			android:textSize="@dimen/taillePolice1" 
			android:layout_gravity="center" android:paddingTop="10dp"/>
		
		<EditText android:id="@+nvxStenope/EdTxtFocale" 
			android:layout_height="wrap_content" 
			android:inputType="numberDecimal"
			android:layout_width="match_parent"	/>
	
		<TextView android:text="@string/ouverture" 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content" 
			android:id="@+nvxStenope/txtOuverture"
			android:textSize="@dimen/taillePolice1" 
			android:layout_gravity="center" 
			android:paddingTop="10dp"></TextView>
		
		<EditText android:id="@+nvxStenope/EdTxtOuverture" 
			android:layout_height="wrap_content" 
			android:inputType="numberDecimal"
			android:layout_width="match_parent" />
	
		<TextView android:text="@string/description" 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content" 
			android:id="@+nvxStenope/txtDesc" 
			android:textSize="@dimen/taillePolice1" 
			android:layout_gravity="center" android:paddingTop="10dp"/>
		
		<EditText android:id="@+nvxStenope/EdTxtDesc" 
			android:layout_height="wrap_content" 
			android:layout_width="match_parent"
			android:inputType="text"/>
			
			<Button android:id="@+nvxStenope/btnSave" 
			android:layout_width="fill_parent" 
			android:layout_gravity="center_horizontal" 
			android:text="@string/sauver" 
			android:layout_height="wrap_content"/>
	
</LinearLayout>

			
  
</ScrollView>
