<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content" 
	android:orientation="horizontal">
	
	<ImageView android:id="@+id/stenope_Item_ImageView" 
	android:layout_height="100dp" 
	android:layout_width="100dp" 
	android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:contentDescription="@string/itemimage"></ImageView>
	
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:orientation="vertical">
		
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:orientation="horizontal">
			
			<TextView 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:text="@string/nom"
			android:textStyle="bold"
			/>
			<TextView 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content" 
			android:id="@+id/stenope_Item_textNom"
			/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:orientation="horizontal">
			
			<TextView 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:text="@string/focale"
			android:textStyle="bold"
			android:textColor="#FF808080"
			/>
			<TextView 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content" 
			android:id="@+id/stenope_Item_TextFocale"
			android:textColor="#FF808080"
		/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:orientation="horizontal">
			<TextView 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:text="@string/ouverture"
			android:textStyle="bold"
			android:textColor="#FF808080"
			/>
			<TextView 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content" 
			android:id="@+id/stenope_Item_TextDiaphragme"
			android:textColor="#FF808080"
			/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:orientation="horizontal">
			<TextView android:layout_height="wrap_content" 
			android:id="@+id/stenope_Item_TextDescription" 
			android:layout_width="fill_parent" 
			android:textColor="#FF808080"></TextView>
		
		</LinearLayout>
	</LinearLayout>
</LinearLayout>